support/affiliate layout bug fix

--- a/css/metapho.css
+++ b/css/metapho.css
@@ -36,6 +36,11 @@ a:active {
     width: 300px;
     margin-left: 60px;
 }
+.appinfo .novideo {
+    float: none;
+    width: auto;
+    margin-left: 0;
+}
 
 .appinfo .iconandname h1 {
     letter-spacing: 0.05em;
@@ -159,8 +164,8 @@ a:active {
 .features.support article > h3,
 .features.support article > p {
     margin-left: 15px;
-    margin-right: 15px; 
-} 
+    margin-right: 15px;
+}
 
 .presskit {
     margin: 0 auto;
